# braiins

braiins-os/: .gitlab-ci.yml  README.md  bb.py  build-release.sh  build.sh  discover.py  mkimage.sh  whatsnew.md
braiins-os/bos-toolbox/: .gitignore  bos-toolbox.py  build-bos-toolbox.sh  discover.py  git-win-symlinks.sh  multiconfiger.py  requirements.txt  restore2factory.py  update.py  upgrade2bos.py
braiins-os/bos-toolbox/requirements/: base.txt  python3.5.txt  python3.7.txt
braiins-os/bos-toolbox/upgrade/: backup.py  hwid.py  platform.py  ssh.py  transfer.py  util.py
braiins-os/builder/: builder.py  nand.py  ssh.py
braiins-os/configs/: default.yml
braiins-os/defaults/: release.conf  release.yml
braiins-os/docker/: build-in-docker.sh
braiins-os/multiconfiger/: Makefile  multiconfiger.py
braiins-os/package/mining/bosminer/: Makefile
braiins-os/package/mining/bosminer/files/: bosminer-template.toml  bosminer.init
braiins-os/package/mining/miner_tools/: Makefile
braiins-os/package/mining/miner_tools/files/: CONFIG.am  CONTROL  miner
braiins-os/package/system/bos_autoupgrade/: Makefile
braiins-os/package/system/bos_autoupgrade/files/: bos_autoupgrade.init  bos_upgrade_at.sh
braiins-os/package/system/bos_config/: Makefile
braiins-os/package/system/bos_config/files/: bos_config.init
braiins-os/package/system/bos_logger/: Makefile
braiins-os/package/system/bos_logger/files/: bos_logger.init  system.config
braiins-os/package/system/bos_monitor/files/: bos_monitor.sh
braiins-os/package/system/bos_nand/: Makefile
braiins-os/package/system/bos_nand/files/: post_upgrade.init
braiins-os/package/system/bos_recovery/: Makefile
braiins-os/package/system/bos_sd/: Makefile
braiins-os/package/system/bos_tools/: Makefile
braiins-os/package/system/bos_tools/files/: bos  bos.config  ip-report.lua
braiins-os/package/system/bos_upgrade/: Makefile
braiins-os/package/system/firmware/: Config.in  Makefile
braiins-os/package/system/firmware/files/: customfeeds.conf
braiins-os/package/system/uboot-miner/: Makefile
braiins-os/updater/: update.py  upgrade
braiins-os/upgrade/: jq.awk  restore.py  stage1.sh  stage2.sh  uboot_env.txt  upgrade.py  util.py
braiins-os/upgrade/am1/: CONTROL  platform.py
braiins-os/upgrade/am1/web/: runme.sh
braiins-os/upgrade/am2/: CONTROL  platform.py  restore.sh
braiins-os/upgrade/am2/web/: runme.sh
open/bosminer/: Cargo.toml
open/bosminer/bosminer/: Cargo.toml
open/bosminer/bosminer-am1-s9/: Cargo.toml
open/bosminer/bosminer-am1-s9/src/: bm1387.rs  cgminer.rs  config.rs  error.rs  gpio.rs  hashchain.rs  hooks.rs  io.rs  lib.rs  main.rs  power.rs  sensor.rs  temperature.rs  test.rs
open/bosminer/bosminer-am1-s9/src/bm1387/: i2c.rs
open/bosminer/bosminer-am1-s9/src/hashchain/: counters.rs  frequency.rs  glitch.rs  registry.rs  utils.rs
open/bosminer/bosminer-am1-s9/src/power/: firmware.rs
open/bosminer/bosminer-am1-s9/src/sensor/: tmp42x.rs  tmp451.rs
open/bosminer/bosminer-am1-s9/src/test/: work_generation.rs
open/bosminer/bosminer-am1-s9/tests/: common.rs  s9_voltage_ctrl_test.rs
open/bosminer/bosminer-antminer/: Cargo.toml  fan-temp-control.puml
open/bosminer/bosminer-antminer/src/: bm1387.rs  error.rs  fan.rs  halt.rs  io.rs  lib.rs  midstate_count.rs  monitor.rs  registry.rs  utils.rs
open/bosminer/bosminer-antminer/src/bm1387/: command.rs  i2c.rs
open/bosminer/bosminer-antminer/src/io/: ext_work_id.rs  uio.rs
open/bosminer/bosminer-config/src/: client.rs
open/bosminer/bosminer-erupter/: Cargo.toml
open/bosminer/bosminer-erupter/src/: device.rs  lib.rs  main.rs
open/bosminer/bosminer-erupter/tests/: common.rs
open/bosminer/bosminer-macros/: Cargo.toml
open/bosminer/bosminer/src/: backend.rs  client.rs  entry.rs  error.rs  hal.rs  hub.rs  job.rs  stats.rs  sync.rs  test_utils.rs  version.rs  work.rs
open/bosminer/bosminer/src/client/: drain.rs  scheduler.rs  stratum_v2.rs
open/bosminer/bosminer/src/client/stratum_v2/: connectors.rs  telemetry.rs  v1.rs
open/bosminer/bosminer/src/client/stratum_v2/connectors/: insecure.rs  noise.rs  v1.rs
open/bosminer/bosminer/src/sync/: event.rs
open/bosminer/bosminer/src/test_utils/: block_mining.rs
open/bosminer/bosminer/src/work/: solver.rs
open/hw/zynq-io-am1-s9/: README.md
open/hw/zynq-io-am1-s9/design/: generate_ip_axi_bm13xx.tcl  generate_ip_axi_board_ctrl.tcl  generate_ip_axi_fan_ctrl.tcl  generate_ip_axi_glitch_monitor.tcl  run.sh  setup.tcl  system_init.tcl  system_xc7z007s.tcl  system_xc7z010.tcl
open/hw/zynq-io-am1-s9/design/src/constrs/: pin_assignment_xc7z007s.tcl  pin_assignment_xc7z010.tcl
open/hw/zynq-io-am1-s9/design/src/ip_cores/axi_bm13xx/fve/: axi_bm13xx_tb.sv  bfm_uart.sv  sim.tcl
open/hw/zynq-io-am1-s9/design/src/ip_cores/axi_bm13xx/hdl/: axi_bm13xx_v1_0.vhd  bm13xx_S_AXI.vhd  bm13xx_core.vhd  uart.vhd  uart_debouncer.vhd
open/hw/zynq-io-am1-s9/design/src/ip_cores/axi_board_ctrl/hdl/: axi_board_ctrl_v1_0.vhd  board_ctrl_S_AXI.vhd  board_ctrl_core.vhd
open/hw/zynq-io-am1-s9/fpga-io/: map.svd
open/protocols/cgminer-api/: Cargo.toml
open/protocols/cgminer-api/src/: command.rs  lib.rs  response.rs  test.rs
open/protocols/cgminer-api/src/response/: ext.rs
open/protocols/cgminer-api/src/test/: utils.rs
open/protocols/stratum/: Cargo.toml
open/protocols/stratum/src/v2/noise/: auth.rs
open/utils-rs/async-compat/: Cargo.toml
open/utils-rs/async-compat/src/: lib.rs
open/utils-rs/async-i2c/: Cargo.toml
open/utils-rs/async-i2c/src/: lib.rs  test_utils.rs
open/utils-rs/hwmon/: Cargo.toml
open/utils-rs/hwmon/src/: tmp42x.rs
open/utils-rs/linux-async-i2c/: Cargo.toml
open/utils-rs/linux-async-i2c/src/: lib.rs
open/utils-rs/sensors/: Cargo.toml
open/utils-rs/sensors/src/: lib.rs  tmp42x.rs  tmp451.rs
open/utils-rs/time/: Cargo.toml
open/utils-rs/time/src/: lib.rs
open/utils-rs/tokio-file-unix/: Cargo.toml
open/utils-rs/tokio-file-unix/src/: lib.rs
open/utils-rs/uio-async/: Cargo.toml
open/utils-rs/uio-async/src/: linux.rs
(+5 files in other folders)
