[package]
name = "bosminer-am1-s9"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bosminer = { path = "../bosminer" }
bosminer-antminer = { path = "../bosminer-antminer" }
bosminer-config = { path = "../bosminer-config" }
bosminer-macros = { path = "../bosminer-macros" }
ii-async-utils = { path = "../../utils-rs/async-utils" }
ii-async-i2c = { path = "../../utils-rs/async-i2c" }
ii-linux-async-i2c = { path = "../../utils-rs/linux-async-i2c" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-cgminer-api = { path = "../../protocols/cgminer-api" }
ii-fpga-io-am1-s9 = { path = "../../hw/zynq-io-am1-s9/fpga-io" }
ii-logging = { path = "../../utils-rs/logging" }
ii-sensors = { path = "../../utils-rs/sensors" }
futures = "0.3.5"
tokio = { version = "0.2.20", features = ["full"] }
failure = "0.1.5"
lazy_static = "1.3"
packed_struct="0.3"
packed_struct_codegen = "0.3"
linux-embedded-hal = { version = "0.2.0" }
sysfs_gpio = { version = "0.5.3" }
chrono = "0.4.9"
async-trait = "0.1.13"
inventory = "0.1.4"
approx = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
toml = "0.5"
once_cell = "1.2.0"
embedded-hal = "0.2.0"
