[package]
name = "bosminer"
version = "0.2.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bosminer-config = { path = "../bosminer-config" }
bosminer-macros = { path = "../bosminer-macros" }
ii-async-utils = { path = "../../utils-rs/async-utils" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-cgminer-api = { path = "../../protocols/cgminer-api" }
ii-logging = { path = "../../utils-rs/logging" }
ii-stats = { path = "../../utils-rs/stats" }
ii-stratum = { path = "../../protocols/stratum" }
ii-stratum-proxy = { path = "../../stratum-proxy" }
ii-wire = { path = "../../protocols/wire" }
futures = "0.3.5"
tokio = { version = "0.2.20", features = ["full"] }
bytes = "0.5"
async-trait = "0.1"
failure = "0.1.5"
once_cell = "1.2"
downcast-rs = "1.0.4"
hex = "0.3.1"
git-version = "0.3.3"
atomic_enum = "0.1"
pin-project = "0.4.5"
