[package]
name = "ii-cgminer-api"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-logging = { path = "../../utils-rs/logging" }
ii-wire = { path = "../../protocols/wire" }
futures = "0.3.5"
bytes = "0.5"
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
