[package]
name = "ii-async-compat"
version = "0.2.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
futures = "0.3.5"
bytes = "0.5"
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
