[package]
name = "ii-hwmon"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "0.1.24"
ii-async-i2c = { path = "../../utils-rs/async-i2c" }
ii-logging = { path = "../../utils-rs/logging" }
lazy_static = "1.3"
packed_struct = "0.3.0"
packed_struct_codegen = "0.3.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "0.2.20", features = ["full"] }
