[package]
name = "ii-linux-async-i2c"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "0.1.24"
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-async-i2c = { path = "../../utils-rs/async-i2c" }
ii-logging = { path = "../../utils-rs/logging" }
linux-embedded-hal = { version = "0.2.0" }
thiserror = "1.0"
nix = "0.17.0"
libc = "0.2.69"

[dependencies.embedded-hal]
version = "0.2.0"
