[package]
name = "tokio-file-unix"
version = "0.5.1"
authors = ["Phil Ruffwind <rf@rufflewind.com>"]
description = "Asynchronous support for epollable files via Tokio on Unix-like platforms"
documentation = "https://docs.rs/tokio-file-unix"
repository = "https://github.com/Rufflewind/tokio-file-unix"
readme = "README.md"
keywords = ["asynchronous", "file", "pipe", "stdio", "tokio"]
categories = ["asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", "tests/seek.txt"]
edition = "2018"

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
bytes = "0.5"
libc = "0.2.21"
mio = "0.6"
